_config/_k8s/infra/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: { }
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - env:
            - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
              value: 'TRACE'
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: gervasioartur/api-gateway:latest
          name: api-gateway
          ports:
            - containerPort: 8080
          resources: { }
      restartPolicy: Always
status: { }
