_config/_k8s/infra/inventory-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product_database
  name: product_database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product_database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: product_database
    spec:
      containers:
        - image: mongo:4.4.14-rc0-focal
          name: product_database
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: product_database-claim0
      restartPolicy: Always
      volumes:
        - name: product_database-claim0
          persistentVolumeClaim:
            claimName: product_database-claim0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product_database
  name: product_database
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: product_database
status:
  loadBalancer: {}
