_config/_k8s/infra/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: balancer
spec:
  selector:
    app: balancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
