_config/_k8s/infra/order-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-database
  name: order-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: order-database
    spec:
      containers:
        - args:
            - -p
            - "5430"
          image: postgres
          name: order-database
          ports:
            - containerPort: 5430
          resources: { }
          volumeMounts:
            - mountPath: /data/postgres
              name: order-database-claim0
      restartPolicy: Always
      volumes:
        - name: order-database-claim0
          persistentVolumeClaim:
            claimName: order-database-claim0
status: { }
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-database
  name: order-database
spec:
  ports:
    - name: "5430"
      port: 5430
      targetPort: 5430
  selector:
    app: order-database
status:
  loadBalancer: { }
