_config/_k8s/infra/product-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product-database
  name: product-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: product-database
    spec:
      containers:
        - image: mongo:4.4.14-rc0-focal
          name: product-database
          ports:
            - containerPort: 27017
          resources: { }
          volumeMounts:
            - mountPath: /data/db
              name: product-database-claim0
      restartPolicy: Always
      volumes:
        - name: product-database-claim0
          persistentVolumeClaim:
            claimName: product-database-claim0
status: { }
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-database
  name: product-database
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: product-database
status:
  loadBalancer: { }
